Fix: Better timeline alignment

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -83,6 +83,30 @@
     .carousel-item img {
         width: 480px;
     }
+
+    .timeline-header {
+        height: 60px;
+    }
+
+    .timeline-outtake {
+        height: 180px;
+    }
+
+    .timeline-list ul {
+        margin-bottom: 0px !important;
+    }
+
+    .timeline-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        align-content: center;
+        height: 300px;
+        padding-top: 15px;
+        border-top: 1px solid #e2e2e2;
+        border-bottom: 1px solid #e2e2e2;
+    }
 }
 
 @media only screen and (max-width: 768px) {
